# nvenc

./: README.md  meson.build  package-release.sh
dlls/: meson.build
dlls/nvcuvid/: meson.build
dlls/nvcuvid_fdll/: meson.build  nvcuvid.rc
dlls/nvencodeapi/: meson.build  nvencodeapi.c
dlls/nvencodeapi_fdll/: meson.build  nvencodeapi.rc
include/: cuda.h  cuviddec.h  nvcuvid.h  nvencodeapi.h
